streams example added